fixed bug on small browsers

--- a/css/agency.css
+++ b/css/agency.css
@@ -783,8 +783,8 @@ ul.social-buttons li a:active {
     transform: translate(-50%, -50%);
     background-image: url('../img/message/letter2.png');
     background-repeat: no-repeat;
-    width:100%;
-    height: 100%;
+    width:80%;
+    height: 80%;
     max-height: 612px;
     max-width:1000px;
     background-size: cover;
